...
    return Scaffold(
      backgroundColor: Colors.grey[300],
      appBar: AppBar(
        title: Center(
          child: Text(
            selectedTitle,
            key: Key('topTitle'),// Use the selectedTitle variable here
            style: const TextStyle(
              color: Colors.black,
              fontFamily: 'Poppins',
              fontWeight: FontWeight.bold,
              fontSize: 42,
            ),
          ),
        ),
        actions: <Widget>[
          IconButton(
            key: Key('registrationPageIcon'),
            icon: const Icon(Icons.settings, color: Colors.blueGrey, size: 35.0),
            onPressed: () {
              Navigator.push(
                context,
                MaterialPageRoute(builder: (context) => RegistrationPage()),
              );
...
