...
                  ),
                ),
                const SizedBox(
                  height: 20,
                ),
                ElevatedButton(
                  key: const Key("activateButton"),
                  onPressed: () {
                    if (_formKey.currentState?.validate() ?? false) {
                      _formKey.currentState?.save();
                      Navigator.pushReplacement(
                        context,
                        MaterialPageRoute(
...
