...
                          const SizedBox(
                            height: 20,
                          ),
                          Padding(
                            padding: const EdgeInsets.only(bottom: 40.0),
                            child: ElevatedButton(
                              key: Key('getActivationCodeButton'),
                              onPressed: _submitForm,
                              style: ElevatedButton.styleFrom(
                                minimumSize: const Size(200, 60),
                              ),
                              child: const Text(
                                'Get Activation Code',
...
