...
                color: Colors.white,
                child: Row(
                  children: [
                    const Spacer(),
                    Text(
                      title,
                      key: Key('dashboardTitle'),
                      textAlign: TextAlign.center,
                      style: const TextStyle(
                        fontFamily: 'Poppins',
                        fontSize: 42, // Adjusted font size
                        fontWeight: FontWeight.bold,
                      ),
...
